# call-your-loved-ones

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  schema.sql  start.sh
.github/workflows/: app.yml
api/: auth.py  users.py
common/: dependencies.py
crud/: loved_ones.py  users.py
db/: database.py
services/: auth.py
templates/: index.html  loved_ones_list.html
