[project]
name = "call_your_loved_ones"
version = "0.1.0"
description = ""
authors = [{ name = "mrkaye97", email = "mrkaye97@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi[standard] (>=0.121.3,<0.122.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
